unpackaged/main/default/objects/ChampifyIo__ChampifyOppContactRole__c/ChampifyIo__ChampifyOppContactRole__c.object-meta.xml
<CustomObject>
    <label>Champify Opp Contact Role</label>
    <nameField>
        <label>Champify Opp Contact Role Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Champify Opp Contact Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>