unpackaged/main/default/objects/ChampifyIo__ChampifyOppContactRole__c/fields/ChampifyIo__AccountId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Champify Opp Contact Roles</relationshipLabel>
    <relationshipName>ChampifyOppContactRoles</relationshipName>
    <type>Lookup</type>
</CustomField>