unpackaged/main/default/objects/ChampifyIo__ChampifyOppContactRole__c/fields/ChampifyIo__ContactId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Champify Opp Contact Roles</relationshipLabel>
    <relationshipName>ChampifyOppContactRoles</relationshipName>
    <type>Lookup</type>
</CustomField>