unpackaged/main/default/objects/ChampifyIo__ChampifyOppContactRole__c/fields/ChampifyIo__OpportunityId__c.field-meta.xml
<CustomField>
    <fullName>ChampifyIo__OpportunityId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Champify Opp Contact Roles</relationshipLabel>
    <relationshipName>ChampifyOppContactRoles</relationshipName>
    <type>Lookup</type>
</CustomField>